main.css
body {
    /*background-color: rgb(10, 50, 66);*/
    background: rgb(2,0,36);
    background: linear-gradient(142deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
    font-family: 'Open Sans', sans-serif;
}


#main-div {
}


#navbar {
    background-color: rgb(54, 54, 54);
    text-align: center;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    display: grid;
    position: fixed;
    width: 19vw;
    max-height: 95vh;
    overflow-x: hidden;
}


#title-button {
    font-size: 1.4em;
    font-weight: bold;
    color: white;
    background-color: rgb(33, 168, 231);
    border-color: rgb(33, 168, 231);
    border-radius: 10px;
    padding: 0.5em;
    outline: none;
    margin-bottom: 0.7em;
}


#title-button:active {
    border-style: outset;
}


.nav-link {
    appearance: button;
    text-decoration: none;
    background-color: rgb(54, 54, 54);
    border-style: none;
    padding-top: 1em;
    padding-bottom: 1em;
    margin-left: 0px;
    margin-right: 0px;
    transition-duration: 0.4s;
    color: silver;
    font-size: 1.3em;
    font-weight: bold;
}


.nav-link:hover {
    background-color: rgb(35, 35, 35);
}


#main-doc {
    background-color: rgb(54, 54, 54);
    color: silver;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    margin-left: 20vw;
    margin-right: 1vw;
    margin-bottom: 2vw;
}


.main-section {
    padding: 1em;
    font-size: 1.3em;
}


.main-section h2 {
    font-size: 2em;
    color: rgb(37, 175, 255);
}


#section-seperator {
    width: 95%;
    /*
    background-color: rgb(133, 19, 108);
    border: 0;
    height: 2px;
    */
    margin-top: 2.5em;
    margin-bottom: 1em;
}


li {
    margin-top: 0.6em;
    margin-bottom: 0.6em;
}


code {
    color: black;
    display: block;
    text-align: left;
    white-space: pre;
    position: relative;
    word-break: normal;
    word-wrap: normal;
    line-height: 2;
    background-color:#f7f7f7;
    padding:15px;
    margin:10px;
    border-radius:5px;
}



@media (max-width: 900px){
    
    
    #navbar {
        text-align: center;
        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
        display: grid;
        grid-row-gap: 1em;
        position: relative;
        width: 97vw;
        overflow-x: hidden;
    }
    
    
    #main-doc {
        background-color: rgb(54, 54, 54);
        color: silver;
        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
        margin-top: 1em;
        margin-left: 0px;
        width: 100%;
    }
    
    
    .main-section {
        padding: 0.5em;
        font-size: 1.2em;
    }
    
    
    .main-section h2 {
        font-size: 1.7em;
    }


    .nav-link:hover {
        background-color: rgb(54, 54, 54);
    }
}


@media (min-width: 900px) {
    
    /* Following custom scrollbar from w3schools.com */

    /* width */
    ::-webkit-scrollbar {
        width: 10px;
    }

    /* Track */
    ::-webkit-scrollbar-track {
        background: rgb(54, 54, 54)
    }

    
    /* Handle */
    ::-webkit-scrollbar-thumb {
        background: rgb(88, 88, 88); 
    }

    /* Handle on hover */
    ::-webkit-scrollbar-thumb:hover {
        background: rgb(131, 131, 131); 
    }
}

